<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello</string>
    <string name="app_name">课程表</string>
<string name="mon">周一</string>
<string name="tue">周二</string>
<string name="wed">周三</string>
<string name="thu">周四</string>
<string name="fri">周五</string>
<string name="sat">周六</string>
<string name="sun">周日</string>
<string name="c0">第一节</string>
<string name="c1">第二节</string>
<string name="c2">第三节</string>
<string name="c3">第四节</string>
<string name="c4">第五节</string>
<string name="c5">第六节</string>
<string name="group_insert">添加课程</string>
<string name="dialog_class">课程名称:</string>
<string name="week">上课周次:</string>
<string name="dialog_address">教室:</string>
<string name="ok">保存</string>
<string name="cancel">取消</string>
<string name="none"> </string>
<string name="del">删除</string>
<string name="insert_suc">已添加成功</string>
<string name="insert_fail">添加失败</string>
<string name="insert_none">课程名称不能为空</string>
<string name="del_suc">删除成功</string>
<string name="del_fail">删除失败</string>
<string name="help">帮助</string>


<string name="help_text">长按某节课会弹出添加课程菜单\n长按已有课程会弹出删除课程菜单</string>
<string name="about_text">简易课程表</string>

<string name="exit">退出</string>
</resources>
