<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="10dip"
  android:background="@drawable/insert"
  android:layout_gravity="left"
  android:orientation="vertical">
  
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/dialog_class"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      <EditText
        android:id="@+id/new_class"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        
        android:gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/dialog_address"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />       
    <EditText
        android:id="@+id/new_address"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        
        
        android:gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/week"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
        android:id="@+id/new_week"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        
        android:gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/insert_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/ok" />

	<Button
	    android:id="@+id/insert_cancel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dip"
	    android:text="@string/cancel" />

</LinearLayout>
